--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,11 @@
   flex-direction: column;
   height: 100%;
   //   background-color: #e1e2ed;
+  background: url("https://images.unsplash.com/photo-1727717561078-a58d2a7cb1fb?ixid=M3w2NjE1MDF8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MjgxMjk5NjJ8&ixlib=rb-4.0.3&w=1920&h=1080&fit=crop");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 .top-section {
   text-align: center;
