basic styling of tabs

--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -1,15 +1,15 @@
 <div class="tabs">
-    <div class="tab">
+    <div class="tab bookmarks-tab">
         <div class="tab-tile">
             <i class="material-symbols-outlined">stars</i>
         </div>
     </div>
-    <div class="tab">
+    <div class="tab todos-tab">
         <div class="tab-tile">
             <i class="material-symbols-outlined">task_alt</i>
         </div>
     </div>
-    <div class="tab">
+    <div class="tab notes-tab">
         <div class="tab-tile">
             <i class="material-symbols-outlined">draft_orders</i>
         </div>
