--- a/src/app/tabs/tabs.component.scss
+++ b/src/app/tabs/tabs.component.scss
@@ -1,13 +1,19 @@
 .tabs {
   display: flex;
-  padding: 8px 12px;
+  padding: 4px 16px;
   border-radius: 12px;
-  gap: 12px;
-  background-color: rgba(255, 255, 255, 0.25);
+  gap: 16px;
+  background-color: #fff;
+  //   background-color: rgba(255, 255, 255, 0.25);
   margin: 48px 12px 12px;
   .tab {
     position: relative;
     z-index: 1;
+    transition: all 0.2s;
+    transition-delay: 0.2s;
+    &.active {
+      outline: none;
+    }
     &-tile {
       //   border-radius: 12px;
       //   background: linear-gradient(45deg, #f8b5a5, #e2d2fd);
@@ -15,17 +21,17 @@
       padding: 16px;
       //   background-color: rgba(0, 0, 0, 0.1);
       cursor: pointer;
-
+      transition: all 0.4s cubic-bezier(0, 0, 0, 1.55);
       &::before {
         content: "";
         position: absolute;
         height: 100%;
         width: 100%;
-        background-color: rebeccapurple;
+        // background-color: rebeccapurple;
         top: 0;
         left: 0;
         border-radius: 12px;
-        transition: all 0.2s;
+        // transition: all 0.1s;
         z-index: -1;
         opacity: 0.9;
       }
@@ -41,12 +47,46 @@
     }
   }
 }
-.bookmarks-tab .tab-tile::before {
-  background: linear-gradient(45deg, #ea8d8d, #a890fe);
+.bookmarks-tab.active {
+  .tab-tile::before,
+  &::after {
+    background: linear-gradient(45deg, #ea8d8d, #a890fe);
+  }
 }
-.todos-tab .tab-tile::before {
-  background: linear-gradient(45deg, #bd499c, #a890fe);
+
+.todos-tab.active {
+  .tab-tile::before,
+  &::after {
+    background: linear-gradient(45deg, #bd499c, #a890fe);
+  }
 }
-.notes-tab .tab-tile::before {
-  background: linear-gradient(45deg, #f28080, #fe9090);
+.notes-tab.active {
+  .tab-tile::before,
+  &::after {
+    background: linear-gradient(45deg, #f28080, #fe9090);
+  }
+}
+
+.tab.active .tab-tile {
+  transform: translateY(-50%);
+  &::before {
+    border-radius: 50%;
+    transform: scale(1.1);
+    opacity: 1;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+  }
+  i {
+    color: #fff;
+  }
+}
+
+.tab.active::after {
+  content: "";
+  position: absolute;
+  height: 4px;
+  width: 80%;
+  left: 50%;
+  bottom: 0;
+  border-radius: 2px;
+  transform: translateX(-50%);
 }
